package edu.uark.dataaccess.entities;

public class BaseFieldNames
{
	public static final String ID = "id";
}
