package edu.uark.models.entities;

//Started on 9-27. Roughly 10 minutes - Skyler
public class EmployeeEntity {

}
