package edu.uark.models.entities.fieldnames;

import edu.uark.dataaccess.entities.BaseFieldNames;

public class ProductFieldNames extends BaseFieldNames
{
	public static final String LOOKUP_CODE = "lookupcode";
	public static final String COUNT = "count";
	public static final String CREATED_ON = "createdon";
}
