package edu.uark.models.repositories;

//Started on 9-27. Roughly 10 minutes - Skyler
public class EmployeeRepository
{

}
